// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kryptos (oct) export should export b64 1`] = `
{
  "algorithm": "HS512",
  "privateKey": "diYnyceZxmn18xGjVobBEwOSj2QOavHfv_tWGNuBpjND572Pa3qD8PDqDSrvoLtLOWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ-5jewLMREoGje9_pQzGSPLgh-cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI-iOK8Zk1MiiomJww5w47Uz7X6Ha_uz7ctCESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZffuMSb8pScaIK6Vfef_1c7Vg",
  "publicKey": "",
  "type": "oct",
  "use": "sig",
}
`;

exports[`Kryptos (oct) export should export der 1`] = `
{
  "algorithm": "HS512",
  "privateKey": {
    "data": [
      118,
      38,
      39,
      201,
      199,
      153,
      198,
      105,
      245,
      243,
      17,
      163,
      86,
      134,
      193,
      19,
      3,
      146,
      143,
      100,
      14,
      106,
      241,
      223,
      191,
      251,
      86,
      24,
      219,
      129,
      166,
      51,
      67,
      231,
      189,
      143,
      107,
      122,
      131,
      240,
      240,
      234,
      13,
      42,
      239,
      160,
      187,
      75,
      57,
      108,
      135,
      117,
      14,
      101,
      178,
      107,
      46,
      16,
      128,
      220,
      62,
      6,
      207,
      42,
      159,
      118,
      29,
      243,
      100,
      107,
      6,
      202,
      164,
      43,
      21,
      52,
      26,
      104,
      78,
      86,
      217,
      251,
      152,
      222,
      192,
      179,
      17,
      18,
      129,
      163,
      123,
      223,
      233,
      67,
      49,
      146,
      60,
      184,
      33,
      249,
      192,
      36,
      194,
      215,
      43,
      45,
      66,
      77,
      111,
      6,
      242,
      48,
      99,
      37,
      94,
      98,
      9,
      93,
      225,
      174,
      145,
      107,
      3,
      232,
      23,
      206,
      2,
      41,
      141,
      204,
      242,
      50,
      45,
      255,
      16,
      96,
      194,
      88,
      47,
      219,
      115,
      127,
      94,
      151,
      226,
      100,
      53,
      74,
      245,
      59,
      233,
      143,
      12,
      170,
      138,
      122,
      195,
      63,
      50,
      148,
      1,
      19,
      239,
      21,
      147,
      138,
      242,
      62,
      136,
      226,
      188,
      102,
      77,
      76,
      138,
      42,
      38,
      39,
      12,
      57,
      195,
      142,
      212,
      207,
      181,
      250,
      29,
      175,
      238,
      207,
      183,
      45,
      8,
      68,
      172,
      201,
      131,
      30,
      127,
      214,
      103,
      98,
      91,
      42,
      194,
      193,
      207,
      174,
      115,
      251,
      242,
      40,
      114,
      138,
      255,
      28,
      31,
      186,
      27,
      185,
      178,
      137,
      232,
      121,
      38,
      176,
      41,
      210,
      76,
      19,
      156,
      132,
      54,
      49,
      158,
      100,
      34,
      85,
      151,
      223,
      184,
      196,
      155,
      242,
      148,
      156,
      104,
      130,
      186,
      85,
      247,
      159,
      255,
      87,
      59,
      86,
    ],
    "type": "Buffer",
  },
  "publicKey": {
    "data": [],
    "type": "Buffer",
  },
  "type": "oct",
  "use": "sig",
}
`;

exports[`Kryptos (oct) export should export jwk 1`] = `
{
  "alg": "HS512",
  "k": "diYnyceZxmn18xGjVobBEwOSj2QOavHfv_tWGNuBpjND572Pa3qD8PDqDSrvoLtLOWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ-5jewLMREoGje9_pQzGSPLgh-cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI-iOK8Zk1MiiomJww5w47Uz7X6Ha_uz7ctCESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZffuMSb8pScaIK6Vfef_1c7Vg",
  "kty": "oct",
  "use": "sig",
}
`;

exports[`Kryptos (oct) export should export pem 1`] = `
{
  "algorithm": "HS512",
  "privateKey": "-----BEGIN OCT PRIVATE KEY-----
diYnyceZxmn18xGjVobBEwOSj2QOavHfv/tWGNuBpjND572Pa3qD8PDqDSrvoLtL
OWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ+5jewLMREoGje9/pQzGS
PLgh+cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X
4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI+iOK8Zk1MiiomJww5w47Uz7X6Ha/uz7ct
CESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZff
uMSb8pScaIK6Vfef/1c7Vg==
-----END OCT PRIVATE KEY-----",
  "type": "oct",
  "use": "sig",
}
`;

exports[`Kryptos (oct) to should return json 1`] = `
{
  "algorithm": "HS512",
  "createdAt": 2023-01-01T08:00:00.000Z,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "expiresIn": 2366841600,
  "hasPrivateKey": true,
  "hasPublicKey": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "type": "oct",
  "updatedAt": 2023-12-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`Kryptos (oct) to should return jwk with private key 1`] = `
{
  "alg": "HS512",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "k": "diYnyceZxmn18xGjVobBEwOSj2QOavHfv_tWGNuBpjND572Pa3qD8PDqDSrvoLtLOWyHdQ5lsmsuEIDcPgbPKp92HfNkawbKpCsVNBpoTlbZ-5jewLMREoGje9_pQzGSPLgh-cAkwtcrLUJNbwbyMGMlXmIJXeGukWsD6BfOAimNzPIyLf8QYMJYL9tzf16X4mQ1SvU76Y8Mqop6wz8ylAET7xWTivI-iOK8Zk1MiiomJww5w47Uz7X6Ha_uz7ctCESsyYMef9ZnYlsqwsHPrnP78ihyiv8cH7obubKJ6HkmsCnSTBOchDYxnmQiVZffuMSb8pScaIK6Vfef_1c7Vg",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "oct",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "uat": 1701417600,
  "use": "sig",
}
`;

exports[`Kryptos (oct) to should return jwk with public key 1`] = `
{
  "alg": "HS512",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "k": "",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "oct",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "uat": 1701417600,
  "use": "sig",
}
`;
